2008-09-06 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b21

 * Fix: If an thumbnail (e.g. micronav) has an HTML id,
        dont'use the same id again.

 * Fix: Only show links to comments overview in thumbsview when
        comments are enabled and the albums has comments.

 * Fix: Microthumb navigation.

 * Change: Order of methods in classes/Album.php and added phpdoc.

2008-09-05 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b20

 * Fix: Don't show blue adminbox in photoview
        when user has chosen a background color for albums.

 * Fix: &amp; in new Password link caused a invalid request message.

 * Change: Switched selectboxes in manage groups,
           so they are more intuitive.

 * Change: Some more button nicify.

 * Code Cleanup.

2008-09-05 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b19

 * New: Added arrowkey navigation for microthumbs.

 * Fix: Mail-links to owner in stats were bad HTML.

 * Change: Added CSS classes for arrows in navigation.

 * Fix: Typo in lib/voting.php

2008-09-05 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b18

 * Fix: Imagemap
        - Position of Image were got wrong in IE with horizontal scrolling.
        - Init of canvas was done to early, broke display of maps in IE.

   Thanks to "Spack" from the forums for reporting this.

 * Fix: Use textfield again in phpNuke for ImageMap description.

 * Change: Layout and buttons/actions for Imagemap page.

 * Change: Reenabled KOI8-R

 * Change: Removed some unneeded PHP version check in isSupportedCharset
           as the minimum PHP is 4.1.0

2008-09-05 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b17

 * Fix: Link to comments overview on mainpage.

 * Fix: getCaptionDate when using exiftags.
        Use "Image Generated" first, then "Image Created".

 * Fix: Some wordings. Again thanks to Julien.

 * Change: Increased length for album names that gettruncated in
           select boxes for reorder and move. 

2008-08-28 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b16
