@@ -1,3 +1,9 @@
+2008-09-08 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b22
+
+ * Fix: translation domain wrong in lib/stats.php
+
+   Thanks to Niels Baggesen.
+
 2008-09-06 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b21
 
  * Fix: If an thumbnail (e.g. micronav) has an HTML id,
